fix: login dialog: buttons are occluded on small height

--- a/Frontend/src/app/modules/login/login.component.scss
+++ b/Frontend/src/app/modules/login/login.component.scss
@@ -167,4 +167,7 @@ powered-by{
     top: 0;
     bottom: 0;
   }
+  .dialog {
+    z-index: 120;
+  }
 }
